small alignment-fixes

--- a/css/style.less
+++ b/css/style.less
@@ -178,7 +178,7 @@ ul.sort {
 
 		float: left;
 
-		width: 133.33333333px;
+		width: 134px;
 		height: 200px;
 
 		&:last-of-type {
@@ -190,7 +190,7 @@ ul.sort {
 		display: inline-block;
 
 		> img {
-			width: 133.33333333px;
+			width: 134px;
 			height: 200px;
 
 			-webkit-transform: scale(0.8);
